# cloud_assembler

./: CMakeLists.txt  package.xml
data/: hawkins_piece_1.ply  hawkins_piece_2.ply  optimized_transform.txt  optimized_transform_interface.txt  refer data.txt
include/: cloud_piece_locater.h
launch/: interface.launch  main_assembler.launch
rviz/: assemble_interface.rviz
src/: cloud_assembler_node.cpp  file_io.hpp  main_assembler_node.cpp  piece_locator_node.cpp  shimizu_reloc_node.cpp
